# Over-the-Air-Computation-for-Federated-Learning

./: .gitignore  2inChannelModel.grc  Amp_Encoding_Rx.grc  Amp_Encoding_Rx.py  Amp_Encoding_Tx.grc  Amp_Encoding_Tx.py  README.md  ZC2InputCS.grc  ZCCSPreambleWithData.grc  ZadoffChuCS.grc  ZeroMQMessages.grc  constData.grc  iq_trask.grc  rx.grc  rx.py
Utils/: generate_zadoff_chu.py
fl_implementation/: MAIN_DESCRIPTION.txt  README.md  ZMQ_TOPICS.txt  main.py  pyproject.toml  requirements.txt
fl_implementation/live_dashboard/: app.py
fl_implementation/live_dashboard/.streamlit/: config.toml
fl_implementation/src/: __init__.py  buffer_logger.py  channel_estimation.py  client.py  data.py  generate_zadoff_chu.py  model.py  ota_strategy.py  server.py  trainmodel.py  usrp_interface.py  usrp_txrx.py  usrp_x310.py  zmq_publisher.py
fl_implementation/testing/: generate_bloodmnist_grid.py  simulate_txrx.py  test_ota_results.py  usrp_txrx.py  usrp_x310.py
fl_ota_usrp/: README.md  main.py  requirements.txt  test_guide.md  test_local.py
fl_ota_usrp/configs/: default_config.json
fl_ota_usrp/src/: fl_usrp_client.py  fl_usrp_server.py
fl_ota_usrp/tests/: README.md  usrp_test_1_connectivity.py  usrp_test_2_simple_tx.py  usrp_test_3_simple_rx.py  usrp_test_4_tx_rx_pair.py  usrp_test_5_csi_estimation.py
gnr/: BarkerCS  README.md  ZCCSPreamble2InputwithData.grc  ofdm.grc  rx.grc  rx.py  rx_epy_block_0.py  rx_epy_block_1.py  rx_epy_module_0.py  tx.grc  tx.py
usrp_test/: main.py
usrp_test/Test_Scripts/: test_simple.py
usrp_test/Utils/: usrp_x310.py
(+5 files in other folders)
