[project]
name = "flwr-ota-medvit"
version = "0.1.0"
description = "Federated Learning with OTA Aggregation using MedViTV2 and BloodMNIST"
requires-python = ">=3.9"
dependencies = [
    "flwr[simulation]>=1.5.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "medmnist>=3.0.0",
    "numpy>=1.24.0",
    "pillow>=9.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
